--- a/Application/Views/Shared/_Layout.cshtml
+++ b/Application/Views/Shared/_Layout.cshtml
@@ -27,7 +27,11 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Blobservices" asp-action="ShowAllBlobs">File-Page</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Friends" asp-action="Index">Friendship-Page</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Blobservices" asp-action="ShowAllBlobs">Photos</a>
                         </li>
 
                     </ul>
