--- a/Application/Views/Countries/Index.cshtml
+++ b/Application/Views/Countries/Index.cshtml
@@ -12,7 +12,7 @@
 
 
 <div class="text-center">
-    <form asp-action="Index" method="get">
+    <form asp-action="GetCountries" method="get">
         <div class="form-actions no-color">
             <p>
                 Name: <input type="text" name="search" value="@ViewData["SearchFilter"]" />
