--- a/Application/Views/Shared/_Layout.cshtml
+++ b/Application/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Blobservices" asp-action="ShowAllBlobs">Photos</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Blobservices" asp-action="ShowAllBlobs">Blob-Gallery</a>
                         </li>
 
                     </ul>
