--- a/Application/Views/Countries/Create.cshtml
+++ b/Application/Views/Countries/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -19,12 +19,9 @@
             </div>
 
             <div class="form-group">
-                <label> Photo description</label>
-                <input asp-for="FlagPhoto" class="form-control" />
-                <span asp-validation-for="FlagPhoto" class="text-danger"></span>
-                <p>
-                    <a  asp-controller="BlobServices" asp-action="Create">Post a flag photo in the galery</a>
-                </p>
+                <label> Photo </label>
+                <input asp-for="Image" class="form-control" accept="image/*"/>
+                <span asp-validation-for="Image" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-dark" />
