--- a/Application/Views/People/Getfriends.cshtml
+++ b/Application/Views/People/Getfriends.cshtml
@@ -56,7 +56,7 @@
                 @Html.DisplayFor(modelItem => item.Country)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Photo)
+                <img src=" @Html.DisplayFor(modelItem => item.Photo)" width=30 height=30 />
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
